# OnePuch

./: Animacion.cpp  AudioManager.cpp  CMakeCache.txt  CMakeLists.txt  Demonio.h  Escena.cpp  Escena.h  Fondo.h  Makefile  OnePunch.properties  OnePunchGame  Personaje.cpp  Personaje.h  Templario.cpp  Templario.h  cmake_install.cmake  forWindows.cmake  main.cpp
Clases/Director/: Director.cpp  Director.h
Clases/Escenas/: Escena.cpp  Escena.h  Gameplay.cpp  Gameplay.h  Home.cpp  Home.h
Clases/Managers/: Animacion.cpp  Animacion.h  AudioManager.h  Fondo.cpp  Fondo.h  Input.cpp  Input.h
Clases/Personajes/: Attack.cpp  Attack.h  Block.cpp  Block.h  Death.cpp  Death.h  Demonio.cpp  Demonio.h  Idle.cpp  Idle.h  Parry.cpp  Parry.h  Personaje.cpp  Personaje.h  State.cpp  State.h  Templario.cpp  Templario.h
Clases/UI/: Boton.cpp  Boton.h
Command/: CMakeLists.txt  Command.cpp  Command.h  Makefile
File/: CMakeLists.txt  FileManager.cpp  FileManager.h
Input/: CMakeLists.txt  InputManager.cpp  InputManager.h  Makefile  cmake_install.cmake
Rendering/: CMakeLists.txt  Makefile  RenderManager.cpp  RenderManager.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml
nbproject/private/: private.xml
